# nicegui-single-page-app-router-issue

./: README.md  pyproject.toml
app/: main.py
app/ui/: __init__.py  routes.py
app/ui/router/: __init__.py  router.vue
